--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/cherryApp/YellowRoad/issues"
   },
-  "homepage": "https://github.com/cherryApp/YellowRoad#readme"
+  "homepage": "https://github.com/cherryApp/YellowRoad#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "forever": "^0.15.2",
+    "ip": "^1.1.3",
+    "jade": "^1.11.0",
+    "mongoose": "^4.6.0",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.0"
+  }
 }
