--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "forever": "^0.15.2",
     "ip": "^1.1.3",
     "jade": "^1.11.0",
+    "markdown": "^0.5.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "serve-favicon": "^2.3.0"
